--- a/projects/journal/journal.component.html
+++ b/projects/journal/journal.component.html
@@ -6,24 +6,28 @@
       blogTitle="Future Proof Your Company"
       blogDate="March 27, 2020"
       blogBlurb="Not even five years ago I was designing mobile-first applications with the idea"
+      blogArticle="work-remote"
     ></est-blog-blurb>
 
     <est-blog-blurb
       blogTitle="Flexbox Responsive Navigation"
       blogDate="October 16, 2017"
-      blogBlurb="This is a story all about how my life got flipped turned upside down … Actually, it is not. This post is"
+      blogBlurb="This is a story all about how my life got flipped turned upside down ... Actually, it is not. This post is"
+      blogArticle="flexbox-nav"
     ></est-blog-blurb>
     
     <est-blog-blurb
       blogTitle="Border-Left: Required;"
       blogDate="August 8, 2017"
       blogBlurb="Using Border-Left to display required, success and errors Have you ever viewed a website with chicken pox?"
+      blogArticle="border-left"
     ></est-blog-blurb>
     
     <est-blog-blurb
       blogTitle="Code For Winston-Salem"
       blogDate="July 19, 2017"
       blogBlurb="As my friend and I started the organization Code For Winston Salem, I created a logo"
+      blogArticle="code-ws"
     ></est-blog-blurb>
   </div>
 </div>
