--- a/src/app/est-header/est-header.component.html
+++ b/src/app/est-header/est-header.component.html
@@ -12,7 +12,7 @@
 <div *ngIf="navShow" class="main-navigation" [ngClass]="{'open' : navShow}">
   <div class="nav-links">
     <a routerLink="/home" routerLinkActive="active-nav-selection">Home</a>
-    <a>Workshop</a>
+    <a routerLink="/workshop" routerLinkActive="active-nav-selection">Workshop</a>
     <a routerLink="/journal" routerLinkActive="active-nav-selection">Journal</a>
   </div>
 </div>
