workshop blurb component in action

--- a/projects/est-components/workshop-blurb/workshop-blurb.component.html
+++ b/projects/est-components/workshop-blurb/workshop-blurb.component.html
@@ -1,5 +1,5 @@
 <div class="one-half columns">
-  <a routerLink="../{{projectLink}}"><img src="{{projectImgSrc}}" alt="{{projectImgAlt}}" width="600px" height="400px"/></a>
+  <a routerLink="../{{projectLink}}"><img src="../../assets/images/{{projectImgSrc}}" alt="{{projectImgAlt}}" width="600px" height="400px"/></a>
 
   <h3>{{projectTitle}}</h3>
 
