--- a/projects/workshop/workshop.component.html
+++ b/projects/workshop/workshop.component.html
@@ -2,12 +2,103 @@
 
 <div class="container">
   <div class="u-full-width grayscale-hover">
+    <h2>2021</h2><hr/>
+
+    <est-workshop-blurb
+      projectTitle="Established1992 Redesign"
+      projectTag="Design"
+      projectImgSrc="pilot.jpg"
+      projectImgAlt="Pilot Pale Ale Image"
+      projectLink="pilot.html"
+    >
+    </est-workshop-blurb>
+
+    <div class="one-half columns">
+      <a href="pilot.html"><img src="../../assets/images/pilot.jpg" alt="" width="600px" height="400px"/></a>
+
+      <h3>Established1992.com Redesign</h3>
+
+      <a href="pilot.html">Design</a>
+    </div>
+
+    <div class="one-half columns">
+      <a href="shirts.html"><img src="../../assets/images/city-series/shirtland.jpg" alt="" width="600px" height="400px"/></a>
+
+      <h3>What Is Cycling</h3>
+
+      <a href="shirts.html">Design</a>
+    </div>
+
+    <div class="one-half columns">
+        <a href="timeline.html"><img src="../../assets/images/timelineland.jpg" alt="" width="600px" height="400px"/></a>
+
+        <h3>Gravel Stoke Foamie</h3>
+
+        <a href="timeline.html">UX</a>
+    </div>
+
+    <div class="one-half columns">
+    </div>
+  </div>
+
+  <div class="u-full-width grayscale-hover">
+    <h2>2020</h2><hr/>
+
+    <div class="one-half columns">
+      <a href="pilot.html"><img src="../../assets/images/pilot.jpg" alt="" width="600px" height="400px"/></a>
+
+      <h3>Tapples</h3>
+
+      <a href="pilot.html">Product Designer</a>
+    </div>
+
+    <div class="one-half columns">
+      <a href="shirts.html"><img src="../../assets/images/city-series/shirtland.jpg" alt="" width="600px" height="400px"/></a>
+
+      <h3>Truist Retail Web</h3>
+
+      <a href="shirts.html">UI</a>
+    </div>
+
+    <div class="one-half columns">
+        <a href="timeline.html"><img src="../../assets/images/timelineland.jpg" alt="" width="600px" height="400px"/></a>
+
+        <h3>Est1992Designs</h3>
+
+        <a href="timeline.html">Designer</a>
+    </div>
+
+    <div class="one-half columns">
+    </div>
+  </div>
+
+  <div class="u-full-width grayscale-hover">
+    <h2>2019</h2><hr/>
+
+    <div class="one-half columns">
+      <a href="pilot.html"><img src="../../assets/images/pilot.jpg" alt="" width="600px" height="400px"/></a>
+
+      <h3>BB&amp;T</h3>
+
+      <a href="pilot.html">UI</a>
+    </div>
+
+    <div class="one-half columns">
+      <a href="shirts.html"><img src="../../assets/images/city-series/shirtland.jpg" alt="" width="600px" height="400px"/></a>
+
+      <h3>Fixie App</h3>
+
+      <a href="shirts.html">Design</a>
+    </div>
+  </div>
+
+  <div class="u-full-width grayscale-hover">
       <h2>2018</h2><hr/>
 
       <div class="one-half columns">
         <a href="pilot.html"><img src="../../assets/images/pilot.jpg" alt="" width="600px" height="400px"/></a>
 
-        <h3>Pilote Pale Ale</h3>
+        <h3>Pilot Pale Ale</h3>
 
         <a href="pilot.html">Design</a>
       </div>
