--- a/projects/workshop/workshop.component.html
+++ b/projects/workshop/workshop.component.html
@@ -12,33 +12,24 @@
       projectLink="pilot.html"
     >
     </est-workshop-blurb>
-
-    <div class="one-half columns">
-      <a href="pilot.html"><img src="../../assets/images/pilot.jpg" alt="" width="600px" height="400px"/></a>
-
-      <h3>Established1992.com Redesign</h3>
-
-      <a href="pilot.html">Design</a>
-    </div>
-
-    <div class="one-half columns">
-      <a href="shirts.html"><img src="../../assets/images/city-series/shirtland.jpg" alt="" width="600px" height="400px"/></a>
-
-      <h3>What Is Cycling</h3>
-
-      <a href="shirts.html">Design</a>
-    </div>
-
-    <div class="one-half columns">
-        <a href="timeline.html"><img src="../../assets/images/timelineland.jpg" alt="" width="600px" height="400px"/></a>
-
-        <h3>Gravel Stoke Foamie</h3>
-
-        <a href="timeline.html">UX</a>
-    </div>
-
-    <div class="one-half columns">
-    </div>
+    
+    <est-workshop-blurb
+      projectTitle="What Is Cycling"
+      projectTag="Creator"
+      projectImgSrc="/city-series/shirtland.jpg"
+      projectImgAlt="What Is Cycling Image"
+      projectLink="pilot.html"
+    >
+    </est-workshop-blurb>
+    
+    <est-workshop-blurb
+      projectTitle="Gravel Stoke Foamie"
+      projectTag="Collab"
+      projectImgSrc="/city-series/shirtland.jpg"
+      projectImgAlt="Gravel Stoke Foamie Image"
+      projectLink="pilot.html"
+    >
+    </est-workshop-blurb>
   </div>
 
   <div class="u-full-width grayscale-hover">
