--- a/projects/journal/journal-post/work-remote/work-remote.component.html
+++ b/projects/journal/journal-post/work-remote/work-remote.component.html
@@ -1,8 +1,4 @@
-<div class="row">
-  <div class="twelve columns">
-    <h1 class="center">Future Proof Your Company</h1>
-  </div>
-</div>
+<blog-header postTitle="Future Proof Your Company"></blog-header>
 
 <div class="row">
   <div class="twelve columns blog-content">
