--- a/projects/journal/journal.component.html
+++ b/projects/journal/journal.component.html
@@ -6,7 +6,7 @@
       blogTitle="Future Proof Your Company"
       blogDate="March 27, 2020"
       blogBlurb="Not even five years ago I was designing mobile-first applications with the idea"
-      blogArticle="border-left"
+      blogArticle="work-remote"
     ></est-blog-blurb>
 
     <est-blog-blurb
