--- a/projects/workshop/workshop.component.scss
+++ b/projects/workshop/workshop.component.scss
@@ -14,3 +14,21 @@ hr {
   border-style: none;
   height: 3px;
 }
+
+.color-scheme-list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.color-scheme-list>li {
+  display: inline-block;
+  margin-right: 10px;
+}
+
+li.circular-color {
+  border-radius: 50%;
+  border: 1px solid $black;
+  width: 50px;
+  height: 50px;
+}
