--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -52,3 +52,13 @@ p {
     font-weight: 100;
   }
 }
+
+@media (max-width: 500px) {
+  h3.donde-esta {
+    border-top: 10px solid $black;
+    font-size: 3rem;
+    line-height: 3rem;
+    margin-top: 2rem;
+    text-align: left;
+  }
+}
