--- a/projects/est-components/workshop-blurb/workshop-blurb.component.html
+++ b/projects/est-components/workshop-blurb/workshop-blurb.component.html
@@ -3,5 +3,5 @@
 
   <h3>{{projectTitle}}</h3>
 
-  <a routerLink="../{{projectLink}}">{{projectTag}}</a>
+  <a routerLink="{{projectLink}}">{{projectTag}}</a>
 </div>
