--- a/projects/workshop/workshop.component.html
+++ b/projects/workshop/workshop.component.html
@@ -35,21 +35,23 @@
   <div class="u-full-width grayscale-hover">
     <h2>2020</h2><hr/>
 
-    <div class="one-half columns">
-      <a href="pilot.html"><img src="../../assets/images/pilot.jpg" alt="" width="600px" height="400px"/></a>
-
-      <h3>Tapples</h3>
-
-      <a href="pilot.html">Product Designer</a>
-    </div>
-
-    <div class="one-half columns">
-      <a href="shirts.html"><img src="../../assets/images/city-series/shirtland.jpg" alt="" width="600px" height="400px"/></a>
-
-      <h3>Truist Retail Web</h3>
-
-      <a href="shirts.html">UI</a>
-    </div>
+    <est-workshop-blurb
+      projectTitle="Tapples"
+      projectTag="Product Designer"
+      projectImgSrc="pilot.jpg"
+      projectImgAlt="Pilot Pale Ale Image"
+      projectLink="pilot.html"
+    >
+    </est-workshop-blurb>
+    
+    <est-workshop-blurb
+      projectTitle="Truist Retail Web"
+      projectTag="UI"
+      projectImgSrc="pilot.jpg"
+      projectImgAlt="Pilot Pale Ale Image"
+      projectLink="pilot.html"
+    >
+    </est-workshop-blurb>
 
     <div class="one-half columns">
         <a href="timeline.html"><img src="../../assets/images/timelineland.jpg" alt="" width="600px" height="400px"/></a>
@@ -221,11 +223,11 @@
     <h2>2013</h2><hr/>
 
     <div class="one-half columns">
-      <a href="meatcamp.html"><img src="../../assets/images/meatcampland.jpg" alt="" width="600px" height="400px"/></a>
+      <a routerLink="../meatcampchurch"><img src="../../assets/images/meatcampland.jpg" alt="" width="600px" height="400px"/></a>
     
       <h3>Meat Camp Church</h3>
       
-      <a href="meatcamp.html">WordPress Design</a>
+      <a routerLink="../meatcampchurch">WordPress Design</a>
     </div>
   </div>
 </div>
