--- a/src/app/est-header/est-header.component.scss
+++ b/src/app/est-header/est-header.component.scss
@@ -2,7 +2,7 @@
 
 .header {
   width: $est-percent-100;
-  margin-bottom: 5rem;
+  margin-bottom: 5em;
   position: fixed;
   z-index: 99999;
   
@@ -18,8 +18,8 @@
     -moz-transition: .5s ease-in-out;
     -o-transition: .5s ease-in-out;
     transition: .5s ease-in-out;
-    top: 2rem;
-    right: 2rem;
+    top: 2em;
+    right: 2em;
     z-index: 999999;
   
     span {
@@ -126,7 +126,7 @@
   a {
     text-decoration: none;
     margin-right: 0.4em;
-    font-size: 2.3rem;
+    font-size: 2.3em;
   
     &:hover {
       color: $black;
