--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -91,8 +91,7 @@ img {
 }
 
 img.max-img {
-  margin-top: 100px;
-  border-top: 3px solid $black;
+  margin-top: 3em;
 }
 
 .grayscale-hover>.one-half.columns {
