--- a/src/styles/grid.scss
+++ b/src/styles/grid.scss
@@ -4,7 +4,7 @@
   box-sizing: border-box;
   color: $black;
   font-family: gt_walsheim_regular;
-  font-size: 1.1rem;
+  font-size: 1.1em;
   font-weight: 200;
   height: auto;
   margin: 0 auto;
@@ -17,7 +17,7 @@
   position: relative;
   max-width: 80%;
   height: auto;
-  margin: 2rem auto;
+  margin: 2em auto;
   padding-bottom: 1em;
   text-align: center;
 }
