meat camp church final

--- a/projects/est-components/project-entry/project-entry.component.html
+++ b/projects/est-components/project-entry/project-entry.component.html
@@ -1,3 +1,5 @@
+<a routerLink="../workshop">Back to Workshop</a>
+
 <div class="row">
   <div class="twelve columns">
     <h1 class="center">{{projectTitle}}</h1>
