--- a/projects/est-components/project-entry/project-entry.component.scss
+++ b/projects/est-components/project-entry/project-entry.component.scss
@@ -1,3 +1,24 @@
+h2, h3, h4, h5, h6 {
+  font-size: 1.2em;
+}
+
+h1 {
+  margin-bottom: 16px;
+}
+
+h5 {
+  margin-top: 0;
+}
+
+h6 {
+  margin-bottom: 0;
+}
+
+p {
+  font-size: 1em;
+  font-weight: 600;
+}
+
 .color-scheme-list {
   list-style: none;
   margin: 0 0 4em 0;
@@ -5,7 +26,7 @@
 
    li {
     display: inline-block;
-    height: 5px;
     width: 33.33%;
+    height: 5px;
   }
 }
