--- a/projects/home-page/home-page.component.html
+++ b/projects/home-page/home-page.component.html
@@ -20,6 +20,7 @@
   <a href="tel:828-773-9730" role="listitem">(828) 773-9730</a><br/>
   <a href="mailto:info@established1992.com?subject=Holla at me!" role="listitem">info@established1992.com</a><br/>
   <a href="https://www.behance.net/est1992" target="_blank" role="listitem">behance</a><br/>
+  <a href="https://codepen.io/Eli-townsend" target="_blank" role="listitem">codepen</a><br/>
   <a href="https://dribbble.com/ElijahTownsend" target="_blank" role="listitem">dribbble</a><br/>
   <a href="https://github.com/eli-townsend" target="_blank" role="listitem">github</a><br/>
   <a href="https://www.linkedin.com/in/elijah-townsend-55017b50" target="_blank" role="listitem">linkedIn</a><br/>
