--- a/projects/workshop/est-projects/meat-camp-church/meat-camp-church.component.html
+++ b/projects/workshop/est-projects/meat-camp-church/meat-camp-church.component.html
@@ -1,24 +1,15 @@
-<div class="row">
-  <div class="twelve columns">
-    <h1 class="center">Meat Camp Baptist Church</h1>
-
-    <div class="center">
-      <a href="http://meatcampbaptistchurch.org" target="_blank">meatcampbaptistchurch.org</a>- 2013
-    </div>
-
-    <ul class="color-scheme-list">
-      <li class="circular-color" style="background:#6796da;"></li>
-      <li class="circular-color" style="background:#f3f3f3;"></li>
-      <li class="circular-color" style="background:#333;"></li>
-    </ul>
-  </div>
-</div>
+<est-project-entry
+  projectTitle="Meat Camp Church"
+  projectLink="http://meatcampbaptistchurch.org"
+  projectLinkName="meatcampbaptistchurch.org"
+  projectYear="2013"
+></est-project-entry>
       
 <div class="clear"></div>
 
 <div class="row">
   <p>
-    For one of my freelance jobs, I was approached by Meat Camp Baptist Church to create a website for the church that allowed the members to keep up with updates, closings and cancellations. Since I would not be updating the website with all of the notifications, I decided that I would build the site on a content management system (CMS). After researching a few options, I chose WordPress because it would be easy to train members from the church on how to make updates, add content, and add users.
+    As one of my first freelance projects, I was able to create the first website for Meat Camp Baptist Church. This was designed a long time ago, but I leave it on my portfolio to have a baseline for all future work. When I was tasked to create a website for the church, the website had to be able to allow the members to keep up with updates, closings and cancellations. Since I would not be responsible for updating the website with all of the notifications, I decided that I would build the site on a content management system (CMS). After researching a few options, I chose WordPress because it would be easy to train members from the church on how to make updates, add content, and add users.
   </p>
 
   <img src="/assets/images/meatcamp.jpg" alt="meat camp church website" class="max-img" />
