--- a/projects/workshop/workshop.component.html
+++ b/projects/workshop/workshop.component.html
@@ -1,4 +1,4 @@
-<h3 class="donde-esta">Workshop</h3>
+<h3 class="other-pages">Workshop</h3>
 
 <div class="container">
   <div class="u-full-width grayscale-hover">
@@ -52,182 +52,161 @@
       projectLink="pilot.html"
     >
     </est-workshop-blurb>
-
-    <div class="one-half columns">
-        <a href="timeline.html"><img src="../../assets/images/timelineland.jpg" alt="" width="600px" height="400px"/></a>
-
-        <h3>Est1992Designs</h3>
-
-        <a href="timeline.html">Designer</a>
-    </div>
-
-    <div class="one-half columns">
-    </div>
+    
+    <est-workshop-blurb
+      projectTitle="Est1992Designs"
+      projectTag="Designer"
+      projectImgSrc="pilot.jpg"
+      projectImgAlt="Pilot Pale Ale Image"
+      projectLink="pilot.html"
+    >
+    </est-workshop-blurb>
   </div>
 
   <div class="u-full-width grayscale-hover">
     <h2>2019</h2><hr/>
 
-    <div class="one-half columns">
-      <a href="pilot.html"><img src="../../assets/images/pilot.jpg" alt="" width="600px" height="400px"/></a>
-
-      <h3>BB&amp;T</h3>
-
-      <a href="pilot.html">UI</a>
-    </div>
-
-    <div class="one-half columns">
-      <a href="shirts.html"><img src="../../assets/images/city-series/shirtland.jpg" alt="" width="600px" height="400px"/></a>
-
-      <h3>Fixie App</h3>
-
-      <a href="shirts.html">Design</a>
-    </div>
+    <est-workshop-blurb
+      projectTitle="BB&amp;T"
+      projectTag="UI Designer"
+      projectImgSrc="pilot.jpg"
+      projectImgAlt="Pilot Pale Ale Image"
+      projectLink="pilot.html"
+    >
+    </est-workshop-blurb>
+    
+    <est-workshop-blurb
+      projectTitle="Fixie App"
+      projectTag="Product Designer"
+      projectImgSrc="pilot.jpg"
+      projectImgAlt="Pilot Pale Ale Image"
+      projectLink="pilot.html"
+    >
+    </est-workshop-blurb>
   </div>
 
   <div class="u-full-width grayscale-hover">
-      <h2>2018</h2><hr/>
+    <h2>2018</h2><hr/>
 
-      <div class="one-half columns">
-        <a href="pilot.html"><img src="../../assets/images/pilot.jpg" alt="" width="600px" height="400px"/></a>
-
-        <h3>Pilot Pale Ale</h3>
-
-        <a href="pilot.html">Design</a>
-      </div>
-
-      <div class="one-half columns">
-        <a href="shirts.html"><img src="../../assets/images/city-series/shirtland.jpg" alt="" width="600px" height="400px"/></a>
-
-        <h3>Shirt Designs</h3>
-
-        <a href="shirts.html">Design</a>
-      </div>
-
-      <div class="one-half columns">
-          <a href="timeline.html"><img src="../../assets/images/timelineland.jpg" alt="" width="600px" height="400px"/></a>
-
-          <h3>Horizontal Timeline</h3>
-
-          <a href="timeline.html">UX</a>
-      </div>
-
-      <div class="one-half columns">
-      </div>
+    <est-workshop-blurb
+      projectTitle="Pilot Pale Ale"
+      projectTag="Designer"
+      projectImgSrc="pilot.jpg"
+      projectImgAlt="Pilot Pale Ale Image"
+      projectLink="pilot.html"
+    >
+    </est-workshop-blurb>
+    
+    <est-workshop-blurb
+      projectTitle="Horizontal Timeline"
+      projectTag="UX"
+      projectImgSrc="timelineland.jpg"
+      projectImgAlt="Horizontal Timeline Image"
+      projectLink="pilot.html"
+    >
+    </est-workshop-blurb>
   </div>
-
 
   <div class="u-full-width grayscale-hover">
     <h2>2017</h2><hr/>
 
-    <div class="one-half columns">
-        <a href="materialtabs.html"><img src="../../assets/images/tabland.jpg" alt="" width="600px" height="400px"/></a>
-
-        <h3>Material Design Tabs</h3>
-
-        <a href="foundation.html">Design/Developent</a>
-    </div>
-
-    <div class="one-half columns">
-      <a href="trailer.html"><img src="../../assets/images/trailerland.jpg" alt="" width="600px" height="400px"/></a>
-
-      <h3>Trailer..</h3>
-
-      <a href="trailer.html">Product Designer</a>
-    </div>
+    <est-workshop-blurb
+      projectTitle="Material Design Tabs"
+      projectTag="Design/Development"
+      projectImgSrc="tabland.jpg"
+      projectImgAlt="Material Design Tab Image"
+      projectLink="pilot.html"
+    >
+    </est-workshop-blurb>
+    
+    <est-workshop-blurb
+      projectTitle="Trailer.."
+      projectTag="Product Designer"
+      projectImgSrc="trailerland.jpg"
+      projectImgAlt="Trailer Image"
+      projectLink="pilot.html"
+    >
+    </est-workshop-blurb>
   </div>
 
   <div class="u-full-width grayscale-hover">
-    <div class="one-half columns">
-      <a href="winston.html"><img src="../../assets/images/winstonland.jpg" alt="" width="600px" height="400px"/></a>
+    <est-workshop-blurb
+      projectTitle="Winston Theme"
+      projectTag="Design/Development"
+      projectImgSrc="winstonland.jpg"
+      projectImgAlt="Winston Theme Image"
+      projectLink="pilot.html"
+    >
+    </est-workshop-blurb>
 
-      <h3>Winston Theme</h3>
-
-      <a href="winston.html">Design/Development</a>
-    </div>
-
-    <div class="one-half columns">
-      <a href="365.html"><img src="../../assets/images/365land.jpg" alt="" width="600px" height="400px"/></a>
-
-      <h3>365 Of Thanks</h3>
-
-      <a href="365.html">Blogger</a>
-    </div>
+    <est-workshop-blurb
+      projectTitle="365 Of Thanks"
+      projectTag="Blogger"
+      projectImgSrc="365land.jpg"
+      projectImgAlt="365 of Thanks Image"
+      projectLink="pilot.html"
+    >
+    </est-workshop-blurb>
   </div>
-
 
   <div class="u-full-width grayscale-hover">
     <h2>2016</h2><hr/>
 
-    <div class="one-half columns">
-      <a href="foundation.html"><img src="../../assets/images/foundationland.jpg" alt="" width="600px" height="400px"/></a>
+    <est-workshop-blurb
+      projectTitle="Foundation Differential"
+      projectTag="Design/UX"
+      projectImgSrc="foundationland.jpg"
+      projectImgAlt="Foundation Differential Image"
+      projectLink="pilot.html"
+    >
+    </est-workshop-blurb>
 
-      <h3>Foundation Differential</h3>
-
-      <a href="foundation.html">Design/UX</a>
-
-    </div>
-
-    <div class="one-half columns">
-      <a href="destination.html"><img src="../../assets/images/booneland.jpg" alt="" width="600px" height="400px"/></a>
-
-      <h3>Destination Illustration</h3>
-
-      <a href="destination.html">Artist</a>
-    </div>
-  </div>
-
-  <div class="u-full-width grayscale-hover">
-    <div class="one-half columns">
-      <a href="established.html"><img src="../../assets/images/estland.jpg" alt="" width="600px" height="400px"/></a>
-
-      <h3>Established1992.com</h3>
-
-      <a href="established.html">Design/Development</a>
-    </div>
+    <est-workshop-blurb
+      projectTitle="Established1992.com 2016"
+      projectTag="Design/Development"
+      projectImgSrc="estland.jpg"
+      projectImgAlt="Established1992 dot com Image"
+      projectLink="pilot.html"
+    >
+    </est-workshop-blurb>
   </div>
 
   <div class="u-full-width grayscale-hover">
     <h2>2015</h2><hr/>
 
-    <div class="one-half columns">
-      <a href="odmove.html"><img src="../../assets/images/odmoveland.jpg" alt="" width="600px" height="400px"/></a>
-
-      <h3>OD Move</h3>
-
-      <a href="odmove.html">Design/UX</a>
-    </div>
-
-    <div class="one-half columns">
-      <a href="illustrations.html"><img src="../../assets/images/snowflakeland.jpg" alt="" width="600px" height="400px"/></a>
-
-      <h3>Illustrations</h3>
-
-      <a href="illustrations.html">Artist</a>
-    </div>
+    <est-workshop-blurb
+      projectTitle="OD Move"
+      projectTag="Design/UX"
+      projectImgSrc="odmoveland.jpg"
+      projectImgAlt="OD Move Image"
+      projectLink="pilot.html"
+    >
+    </est-workshop-blurb>
   </div>
 
   <div class="u-full-width grayscale-hover">
     <h2>2014</h2><hr/>
 
-    <div class="one-half columns">
-      <a href="odfl.html"><img src="../../assets/images/odflland.jpg" alt="" width="600px" height="400px"/></a>
-
-      <h3>ODFL</h3>
-
-      <a href="odfl.html">UI/UX/Design</a>
-    </div>
+    <est-workshop-blurb
+      projectTitle="ODFL"
+      projectTag="UI/UX/Design"
+      projectImgSrc="odflland.jpg"
+      projectImgAlt="ODFL Image"
+      projectLink="pilot.html"
+    >
+    </est-workshop-blurb>
   </div>
 
   <div class="u-full-width grayscale-hover">
     <h2>2013</h2><hr/>
 
-    <div class="one-half columns">
-      <a routerLink="../meatcampchurch"><img src="../../assets/images/meatcampland.jpg" alt="" width="600px" height="400px"/></a>
-    
-      <h3>Meat Camp Church</h3>
-      
-      <a routerLink="../meatcampchurch">WordPress Design</a>
-    </div>
+    <est-workshop-blurb
+      projectTitle="Meat Camp Church"
+      projectTag="Wordpress"
+      projectImgSrc="meatcampland.jpg"
+      projectImgAlt="Meat Camp Church Image"
+      projectLink="meatcampchurch"
+    >
+    </est-workshop-blurb>
   </div>
 </div>
