--- a/projects/journal/journal.component.html
+++ b/projects/journal/journal.component.html
@@ -1,4 +1,4 @@
-<h3 class="donde-esta">Dear Diary</h3>
+<h3 class="other-pages">Dear Diary</h3>
 
 <div class="row">
   <div class="twelve columns">
