--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -17,8 +17,14 @@ h1 {
 h3.donde-esta {
   border-top: 10px solid $black;
   font-size: 8em;
-  line-height: 8em;
   margin-top: 2em;
+  text-align: left;
+}
+
+h3.other-pages {
+  border-top: 10px solid $black;
+  font-size: 8em;
+  margin-top: 0;
   text-align: left;
 }
 
@@ -63,6 +69,13 @@ p {
     font-size: 3em;
     line-height: 3em;
     margin-top: 2em;
+    text-align: left;
+  }
+
+  h3.other-pages {
+    border-top: 10px solid $black;
+    font-size: 3em;
+    margin-top: 0;
     text-align: left;
   }
 }
