meat camp church final colored corder

--- a/projects/workshop/est-projects/meat-camp-church/meat-camp-church.component.html
+++ b/projects/workshop/est-projects/meat-camp-church/meat-camp-church.component.html
@@ -3,7 +3,13 @@
   projectLink="http://meatcampbaptistchurch.org"
   projectLinkName="meatcampbaptistchurch.org"
   projectYear="2013"
-></est-project-entry>
+>
+  <ul class="color-scheme-list">
+    <li style="background: #6796da"></li>
+    <li style="background: #f3f3f3"></li>
+    <li style="background: #333"></li>
+  </ul>
+</est-project-entry>
       
 <div class="clear"></div>
 
