--- a/projects/est-components/project-entry/project-entry.component.html
+++ b/projects/est-components/project-entry/project-entry.component.html
@@ -5,13 +5,9 @@
     <h1 class="center">{{projectTitle}}</h1>
 
     <div class="center">
-      <a href="{{projectLink}}" target="_blank">{{projectLinkName}}</a>- {{projectYear}}
+      <a href="{{projectLink}}" target="_blank">{{projectLinkName}}</a> - {{projectYear}}
     </div>
 
-    <ul class="color-scheme-list">
-      <li [ngStyle]="{'background': projectColorOne}"></li>
-      <li [ngStyle]="{'background': projectColorTwo}"></li>
-      <li [ngStyle]="{'background': projectColorThree}"></li>
-    </ul>
+    <ng-content></ng-content>
   </div>
 </div>
