--- a/projects/est-components/blog-header/blog-header.component.html
+++ b/projects/est-components/blog-header/blog-header.component.html
@@ -1,4 +1,4 @@
-<a routerLink="../journal">Back to Journal</a>
+<a routerLink="../journal" class="back-to">Back to Journal</a>
 
 <div class="row">
   <div class="twelve columns">
