--- a/projects/est-components/project-entry/project-entry.component.html
+++ b/projects/est-components/project-entry/project-entry.component.html
@@ -1,4 +1,4 @@
-<a routerLink="../workshop">Back to Workshop</a>
+<a routerLink="../workshop" class="back-to">Back to Workshop</a>
 
 <div class="row">
   <div class="twelve columns">
