--- a/projects/workshop/workshop.component.html
+++ b/projects/workshop/workshop.component.html
@@ -4,30 +4,21 @@
   <div class="u-full-width grayscale-hover">
     <h2>2021</h2><hr/>
 
-    <est-workshop-blurb
+    <!-- <est-workshop-blurb
       projectTitle="Established1992 Redesign"
       projectTag="Design"
       projectImgSrc="pilot.jpg"
       projectImgAlt="Pilot Pale Ale Image"
       projectLink="pilot.html"
     >
-    </est-workshop-blurb>
+    </est-workshop-blurb> -->
     
     <est-workshop-blurb
       projectTitle="What Is Cycling"
       projectTag="Creator"
       projectImgSrc="/city-series/shirtland.jpg"
       projectImgAlt="What Is Cycling Image"
-      projectLink="pilot.html"
-    >
-    </est-workshop-blurb>
-    
-    <est-workshop-blurb
-      projectTitle="Gravel Stoke Foamie"
-      projectTag="Collab"
-      projectImgSrc="/city-series/shirtland.jpg"
-      projectImgAlt="Gravel Stoke Foamie Image"
-      projectLink="pilot.html"
+      projectLink="whatiscycling"
     >
     </est-workshop-blurb>
   </div>
@@ -40,27 +31,18 @@
       projectTag="Product Designer"
       projectImgSrc="pilot.jpg"
       projectImgAlt="Pilot Pale Ale Image"
-      projectLink="pilot.html"
+      projectLink="tapples"
     >
     </est-workshop-blurb>
     
-    <est-workshop-blurb
+    <!-- <est-workshop-blurb
       projectTitle="Truist Retail Web"
       projectTag="UI"
       projectImgSrc="pilot.jpg"
       projectImgAlt="Pilot Pale Ale Image"
       projectLink="pilot.html"
     >
-    </est-workshop-blurb>
-    
-    <est-workshop-blurb
-      projectTitle="Est1992Designs"
-      projectTag="Designer"
-      projectImgSrc="pilot.jpg"
-      projectImgAlt="Pilot Pale Ale Image"
-      projectLink="pilot.html"
-    >
-    </est-workshop-blurb>
+    </est-workshop-blurb> -->
   </div>
 
   <div class="u-full-width grayscale-hover">
@@ -71,7 +53,7 @@
       projectTag="UI Designer"
       projectImgSrc="pilot.jpg"
       projectImgAlt="Pilot Pale Ale Image"
-      projectLink="pilot.html"
+      projectLink="bbt"
     >
     </est-workshop-blurb>
     
@@ -80,7 +62,7 @@
       projectTag="Product Designer"
       projectImgSrc="pilot.jpg"
       projectImgAlt="Pilot Pale Ale Image"
-      projectLink="pilot.html"
+      projectLink="fixie"
     >
     </est-workshop-blurb>
   </div>
@@ -88,26 +70,26 @@
   <div class="u-full-width grayscale-hover">
     <h2>2018</h2><hr/>
 
-    <est-workshop-blurb
+    <!-- <est-workshop-blurb
       projectTitle="Pilot Pale Ale"
       projectTag="Designer"
       projectImgSrc="pilot.jpg"
       projectImgAlt="Pilot Pale Ale Image"
       projectLink="pilot.html"
     >
-    </est-workshop-blurb>
+    </est-workshop-blurb> -->
     
     <est-workshop-blurb
       projectTitle="Horizontal Timeline"
       projectTag="UX"
       projectImgSrc="timelineland.jpg"
       projectImgAlt="Horizontal Timeline Image"
-      projectLink="pilot.html"
+      projectLink="timeline"
     >
     </est-workshop-blurb>
   </div>
 
-  <div class="u-full-width grayscale-hover">
+  <!-- <div class="u-full-width grayscale-hover">
     <h2>2017</h2><hr/>
 
     <est-workshop-blurb
@@ -127,9 +109,9 @@
       projectLink="pilot.html"
     >
     </est-workshop-blurb>
-  </div>
+  </div> -->
 
-  <div class="u-full-width grayscale-hover">
+  <!-- <div class="u-full-width grayscale-hover">
     <est-workshop-blurb
       projectTitle="Winston Theme"
       projectTag="Design/Development"
@@ -147,26 +129,26 @@
       projectLink="pilot.html"
     >
     </est-workshop-blurb>
-  </div>
+  </div> -->
 
   <div class="u-full-width grayscale-hover">
     <h2>2016</h2><hr/>
 
-    <est-workshop-blurb
+    <!-- <est-workshop-blurb
       projectTitle="Foundation Differential"
       projectTag="Design/UX"
       projectImgSrc="foundationland.jpg"
       projectImgAlt="Foundation Differential Image"
       projectLink="pilot.html"
     >
-    </est-workshop-blurb>
+    </est-workshop-blurb> -->
 
     <est-workshop-blurb
       projectTitle="Established1992.com 2016"
       projectTag="Design/Development"
       projectImgSrc="estland.jpg"
       projectImgAlt="Established1992 dot com Image"
-      projectLink="pilot.html"
+      projectLink="estsixteen"
     >
     </est-workshop-blurb>
   </div>
@@ -179,7 +161,7 @@
       projectTag="Design/UX"
       projectImgSrc="odmoveland.jpg"
       projectImgAlt="OD Move Image"
-      projectLink="pilot.html"
+      projectLink="odmove"
     >
     </est-workshop-blurb>
   </div>
@@ -192,7 +174,7 @@
       projectTag="UI/UX/Design"
       projectImgSrc="odflland.jpg"
       projectImgAlt="ODFL Image"
-      projectLink="pilot.html"
+      projectLink="odfl"
     >
     </est-workshop-blurb>
   </div>
